package lab3.Products;

public class Fruits extends Products{
    public Fruits(String name){
        this.name=name;
    }

}
