package lab3.Products;
public class NewsPapers extends Products {
    public NewsPapers(String name){
        this.name=name;
    }
}
