package lab3.interfaces;
import lab3.Products.Products;

public interface Carryable {
    void carry(Products obj);
}
