package lab3.Products;

public class Vegetables extends Products{
    public Vegetables(String name){
        this.name=name;
    }
}
