package lab3.interfaces;
import lab3.objects.Money;
public interface Earnable {
    void earn(int count, Money obj);
}
