package lab3.places;

public abstract class Market extends Places{
    public Market(String name, PlacesType location){
        super(name,location);
    }
}
